tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__ExpertMBConstruc-AAAAAAAAAAAAAAAAAAAL1g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3030,
  "prerequisites": [
    2856
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Right-click the controller while sneaking will invoke an action called §osurvival autoplace§r. This will attempt to build the multiblock with items from your inventory, provided the area this multi occupies is clear of obstacles. Again, like hologram spawning, multiblocks that accept multiple types of tiered components or has variable length, the number of MSHPs you hold in hand will decide which tier of blocks will be placed. It will place correct amount of hatches for you, but will usually orient the hatches towards you, not perpendicular to the surface. It will just place casings for you if you don't have any hatches in inventory, unless this spot requires the use of a hatch (e.g. the top center spot of EBF).\n\nSurvival autoplace can also take from your alternative inventories, or items that contain/link to an inventory. Currently, this includes:\n- adventure backpacks, either worn or as an item in inventory\n- AE2 portable cells\n- ME networks connected via any AE2 wireless terminal with item access capabilities\n- Forestry backpacks\n- ender chest inventory, if you have the Ender Backpack from Backpacks mod. Note: ordinary backpacks from the Backpacks mod are NOT supported at the moment.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lExpert MB-Construction",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2856
  ],
  "rewards": [],
  "tasks": []
}
