tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__FocusingSciencea-AAAAAAAAAAAAAAAAAAAM2A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3288,
  "prerequisites": [
    3287
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This mechanic is completely optional, and never required for crafting. However, it's greatly incentivized when the number of parallels is high and when crafting the unique items that unlock higher tiers. “Focusing”, in general, means to increase the chances of the outputs in a QFT recipe, and it can be done in two ways, possibly both at the same time. Each method uses a new plasma, both of which are crafted in a T4 Fusion Reactor by using other plasmas as the inputs, including one T3 plasma for each. These plasmas are Neptunium and Fermium and they can be used together, or individually.\n\nWhen Neptunium Plasma is present, the current recipe can have one of the outputs focused. The specific output is chosen with a circuit in the input bus (this is the only thing circuits do for this multi), where circuit 1 is for the 1st output visible in NEI, circuit 2 is for the 2nd output, and so on. It is up to the player to choose which output they want the most out of all the existing ones, and the fact that every recipe has multiple outputs is because of this mechanic.\n\nWhen an output is successfully focused with Neptunium, its chance increases by reducing the chance of all the other outputs. The logic for this change is as follows:\n\n-> Without focusing, the chance of each output is 100 / number of outputs;\n-> If the casing tier matches the recipe tier, the chance of all other outputs is halved and the sum of those halves is added to the focused output (for example, 20/20/20/20/20 becomes 60/10/10/10/10);\n-> If the casing tier is +1 over the recipe tier, halve the other outputs' chance again (for example, 60/10/10/10/10 becomes 80/5/5/5/5);\n-> If the casing tier is +2 or +3 over the recipe tier, set the focused output to 100% and the rest to 0%.\n\nIn general, this type of focusing doesn't increase the total amount of outputs, save for the new items added with this multi that will come out in smaller quantities. Instead, it allows the player to replace less useful outputs with the more useful ones, and this choice is completely up to them, as is the choice of focusing at all.\n\nWhen Fermium Plasma is present, the current recipe will have all of its output chances boosted, unless the chance for one of them is 100%, in which case that chance is unchanged. This happens because the boost increases if the output chance before ferm focusing is smaller, and the maximum boost is achieved when the chance is 0%, which happens with high-tier nep focusing.\n\nWhen an output is successfully focused with Fermium, its chance increases based on how far it is from 100% chance. This applies to all the outputs at once, and the logic for this change is as follows:\n\n-> If the casing tier matches the recipe tier, each output gets increased by 1/4 of the \"failure\" chance (for example, a 50% chance output has a 50% chance of failure, so it gets boosted by 12.5%, becoming 62.5%)\n-> If the casing tier is +1 over the recipe tier, each output gets increased by 1/3 of the \"failure\" chance\n-> If the casing tier is +2 or +3 over the recipe tier, each output gets increased by 1/2 of the \"failure\" chance\n\nWith the two plasmas combined and a +2 or +3 over recipe tier, a 5-output recipe would normally have 20/20/20/20/20 chances, but it becomes 100/50/50/50/50.\n\nMany lategame multis have parallels, which means they complete the recipe several times at once every time the recipe time is completed, instead of only one, but they require extra EU to achieve this. This makes power the biggest constraint for those multiblocks, and the same happens with the QFT, given that recipe inputs are generally very cheap and simple. Throwing more power at the machine means more outputs, in general.\n\nGiven that, a player that wants a faster QFT will make more catalysts to unlock more parallels, but each added parallels adds to the other ones, to a cap of 64. Focusing, instead, changes output odds, which effectively multiplies the number of outputs per cycle. In terms of speed, a recipe with 4 outputs and 64 parallels runs at the speed of 256 parallels for the focused output if it's nep focused to the maximum of 100%, since it was 25% originally.\n\nThis is a lot of saved EU for high-tier, high-parallel QFTs, so it is the main reason for focusing, and both plasmas are useful here. However, plasma consumption is not the same regardless of parallels, it instead scales with the square root of the number of correct catalysts for the recipe, which is to say, the number of parallels.\n\nThis further applies to the 3 new items that are needed to upgrade the casing tiers. Since their output amount is much smaller than usual, they could get a further boost if focusing is being used, to incentivize the plasma mechanic when upgrading the multi.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Focusing Science and Mystery",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3287
  ],
  "rewards": [],
  "tasks": []
}
