tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__GettingMuddyWith-AAAAAAAAAAAAAAAAAAAL4Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3041,
  "prerequisites": [
    1890
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Pretty soon you're going to need lanthanide elements. A lot of them.\nThey're not that easy to separate, however...\n\nCraft up a Digester to unlock the questline in the IV tab.\n\nNote: This multiblock will not function correctly without a muffler hatch",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lGetting Muddy With Monazite",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1890
  ],
  "rewards": [],
  "tasks": []
}
