tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__GrindingWithWind-AAAAAAAAAAAAAAAAAAAHKA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1832,
  "optional_prerequisites": [
    48,
    1831
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "The Windmill is a grinder that uses the force of wind to macerate Items and Blocks. You will only get one crushed Ore from it sometimes. However it does give a bonus when you try to macerate other things. That bonus depends on the item inserted, for example Netherrack has a chance to give two instead of one dust and Wheat will always give one and a quarter flour.\n\nThe dispensers replace a clay block in the walls. Put anything you like in the interior - a bed, stairs, torches, etc.\n\nNormal multiblock rules apply - do not cross chunk boundaries with this multiblock.\n\nIf this is your first GregTech multiblock, as with all the rest you will need to whack the controller with a soft mallet to activate it.\n\nIf you have troubles forming the multiblock, try breaking and replacing the controller block.\n\nThe controller can be fed items via hoppers etc. to allow for larger batches. Just don't allow the dispenser to fill up or it will void outputs.\n\nThe rotor blades will run if the controller is disabled or has no recipe. Remove the blades when not in use or else they'll be used up.\n\nSpeed and output will be affected by wind speed, recipe, and rotor.\n\nMacerates 16 items at a time.\n\nHigh wind speeds will decrease output.\n\nThe durability will decrease according to the wind speed.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lGrinding With Wind",
    "party_single_reward": false,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
